--- a/packages/components/src/Modal/Modal.mdx
+++ b/packages/components/src/Modal/Modal.mdx
@@ -9,6 +9,7 @@ import { ComponentStatus } from "@jobber/docx";
 import { useState } from "react";
 import { Modal } from ".";
 import { Button } from "../Button";
+import { Text } from "../Text";
 
 # Modal
 
@@ -23,8 +24,14 @@ the rest of the application until a specific action is taken.
     const [value, setValue] = useState(false);
     return (
       <>
-        <Modal title="Bob" open={value} onRequestClose={() => setValue(!value)}>
-          Haloo
+        <Modal
+          title="We've updated Jobber"
+          open={value}
+          onRequestClose={() => setValue(!value)}
+        >
+          <Text>
+            It's harder, better, faster, and stronger! 🤖
+          </Text>
         </Modal>
 
         <Button
@@ -48,9 +55,8 @@ You have 3 action props you can use
 
 <Playground>
   {() => {
-    const [value, setValue] = useState(true);
-    const toggleModal = () => {
-      setValue(!value);
+    const [value, setValue] = useState(false);
+    const toggleModal = () => { setValue(!value);
     };
     const handlePrimaryAction = () => {
       alert("✅");
@@ -64,14 +70,16 @@ You have 3 action props you can use
     return (
       <>
         <Modal
-          title="Bob"
+          title="Hold the phone!"
           open={value}
-          primaryAction={{ label: "Submit", onClick: handlePrimaryAction, fullWidth: true }}
-          secondaryAction={{ label: "Cancel", onClick: handleSecondaryAction, fullWidth: true }}
+          primaryAction={{ label: "Submit", onClick: handlePrimaryAction }}
+          secondaryAction={{ label: "Cancel", onClick: handleSecondaryAction }}
           tertiaryAction={{ label: "Delete", onClick: handleTertiaryAction }}
           onRequestClose={toggleModal}
         >
-          Haloo
+          <Text>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe vero ratione praesentium quisquam non porro ullam maiores iure, sed odio?
+          </Text>
         </Modal>
 
         <Button
