replace InputText to use master component

--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -30,7 +30,7 @@ Input Text is used in forms to accept input from users.
     placeholder="Readonly input"
     value="You can't change me."
   />
-  <InputText error placeholder="Invalid input" />
+  <InputText invalid={true} placeholder="Invalid input" />
 </Playground>
 
 ## Properties
