--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -7,30 +7,50 @@ route: /components/input-text
 import { Playground, Props } from "docz";
 import { ComponentStatus } from "@jobber/docx";
 import { InputText } from ".";
+import { Text } from "../Text";
 
 # Input Text
 
-<ComponentStatus stage="rc" responsive="yes" accessible="no" />
+<ComponentStatus stage="rc" responsive="yes" accessible="yes" />
 
-Input Text is used in forms to accept input from users.
-
-## Basic InputText
+Input Text is used in forms to accept short answers from users.
 
 <Playground>
-  <InputText size="small" placeholder="Small input" />
-  <InputText placeholder="Normal input" />
+  <InputText name="invoiceSubject" placeholder="Invoice subject" />
 </Playground>
 
-## InputText States
+## States
 
 <Playground>
-  <InputText disabled={true} placeholder="Disabled input" />
+  <InputText name="disabled" disabled={true} placeholder="Disabled input" />
   <InputText
+    name="readOnly"
     readonly={true}
     placeholder="Readonly input"
     value="You can't change me."
   />
-  <InputText invalid={true} placeholder="Invalid input" />
+  <InputText name="invalid" invalid={true} placeholder="Invalid input" />
+</Playground>
+
+## Sizes
+
+<Playground>
+  <InputText name="smallField" size="small" placeholder="Duration" />
+  <InputText name="largeField" size="large" placeholder="Your username" />
+</Playground>
+
+## Inline
+
+<Playground>
+  <Text>
+    Send a follow-up
+    <InputText
+      name="durationInDays"
+      value="2"
+      size="small"
+      inline={true}
+    /> days after
+  </Text>
 </Playground>
 
 ## Properties
