allow textarea and select as a type

--- a/packages/components/src/FormField/FormField.mdx
+++ b/packages/components/src/FormField/FormField.mdx
@@ -18,6 +18,17 @@ In Jobber a FormField is used to …
 
 <Playground>
   <FormField name="Base" placeholder="Base" />
+  <FormField name="Base" placeholder="Number" type="number" />
+  <FormField name="Base" placeholder="Time" type="time" />
+  <FormField
+    name="Base"
+    placeholder="Describe your favourite colour"
+    type="textarea"
+  />
+  <FormField name="Base" placeholder="How many days?" type="select">
+    <option>1</option>
+    <option>2</option>
+  </FormField>
 </Playground>
 
 <Playground>
