--- a/packages/components/src/FormField/FormField.mdx
+++ b/packages/components/src/FormField/FormField.mdx
@@ -42,7 +42,14 @@ In Jobber a FormField is used to …
 <Playground>
   <p>
     Send a follow-up
-    <FormField value="2" size="small" inline={true} maxLength={3} /> days after
+    <FormField
+      value="2"
+      size="small"
+      inline={true}
+      maxLength={2}
+      align="center"
+    />
+    days after
   </p>
 </Playground>
 
