adjust input text

--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -49,7 +49,10 @@ Input Text is used in forms to accept short answers from users.
       value="2"
       size="small"
       inline={true}
-    /> days after
+      maxLength={2}
+      align="center"
+    />
+    days after
   </Text>
 </Playground>
 
