--- a/packages/design/src/Elevations.mdx
+++ b/packages/design/src/Elevations.mdx
@@ -14,6 +14,7 @@ export function Value({ of: type }) {
   return <>{getValue}</>;
 }
 
-| Component | Value                |
-| :-------- | :------------------- |
-| Modal     | <Value of="modal" /> |
+| Component        | Value                |
+| :--------------- | :------------------- |
+| Form field label | <Value of="base" />  |
+| Modal            | <Value of="modal" /> |
