--- a/packages/components/src/TextField/TextField.mdx
+++ b/packages/components/src/TextField/TextField.mdx
@@ -11,7 +11,7 @@ import { Text } from "../Text";
 
 # TextField
 
-<ComponentStatus stage="pre" responsive="no" accessible="no" />
+<ComponentStatus stage="rc" responsive="yes" accessible="yes" />
 
 A text field is used in forms that accept short or long answers from users.
 
