--- a/packages/components/src/Tabs/Tabs.mdx
+++ b/packages/components/src/Tabs/Tabs.mdx
@@ -6,7 +6,6 @@ route: /components/tabs
 
 import { Playground, Props } from "docz";
 import { ComponentStatus } from "@jobber/docx";
-import { Heading } from "../Heading";
 import { Tabs, Tab } from ".";
 
 # Tabs
@@ -21,12 +20,14 @@ context.
 <Playground>
   <Tabs>
     <Tab text="Eggs">
-      <Heading level="2">Eggs</Heading>
-      <img src="https://loremflickr.com/500/200/eggs" width="100%" />
+      🍳 Some eggs are laid by female animals of many different species,
+      including birds, reptiles, amphibians, mammals, and fish, and have been
+      eaten by humans for thousands of years.
     </Tab>
     <Tab text="Cheese">
-      <Heading level="2">Cheese</Heading>
-      <img src="https://loremflickr.com/500/200/cheese" width="100%" />
+      🧀 Cheese is a dairy product derived from milk that is produced in a wide
+      range of flavors, textures, and forms by coagulation of the milk protein
+      casein.
     </Tab>
   </Tabs>
 </Playground>
