--- a/packages/components/src/Tabs/Tabs.mdx
+++ b/packages/components/src/Tabs/Tabs.mdx
@@ -17,6 +17,10 @@ context.
 
 ## Simple Example
 
+```ts
+import { Tabs, Tab } from "@jobber/components/Tabs";
+```
+
 <Playground>
   <Tabs>
     <Tab text="Eggs">
