--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -9,11 +9,11 @@ import { ComponentStatus } from "@jobber/docx";
 import { InputText } from ".";
 import { Text } from "../Text";
 
-# InputText
+# Input Text
 
 <ComponentStatus stage="rc" responsive="yes" accessible="yes" />
 
-A text field is used in forms that accept short or long answers from users.
+Input text is used in forms that accept short or long answers from users.
 
 ## Short answer
 
