--- a/packages/components/src/Tabs/Tabs.mdx
+++ b/packages/components/src/Tabs/Tabs.mdx
@@ -12,7 +12,7 @@ import { Tabs, Tab } from ".";
 
 <ComponentStatus stage="pre" responsive="no" accessible="no" />
 
-In Jobber a tabs are used to alternate amongs related views within the same
+In Jobber a tabs are used to alternate amongst related views within the same
 context.
 
 ## Simple Example
@@ -23,12 +23,12 @@ import { Tabs, Tab } from "@jobber/components/Tabs";
 
 <Playground>
   <Tabs>
-    <Tab text="Eggs">
+    <Tab label="Eggs">
       🍳 Some eggs are laid by female animals of many different species,
       including birds, reptiles, amphibians, mammals, and fish, and have been
       eaten by humans for thousands of years.
     </Tab>
-    <Tab text="Cheese">
+    <Tab label="Cheese">
       🧀 Cheese is a dairy product derived from milk that is produced in a wide
       range of flavors, textures, and forms by coagulation of the milk protein
       casein.
