change accessible to yes and expanded to convery correctly

--- a/packages/components/src/Menu/Menu.mdx
+++ b/packages/components/src/Menu/Menu.mdx
@@ -10,7 +10,7 @@ import { Menu } from ".";
 
 # Menu
 
-<ComponentStatus stage="pre" responsive="no" accessible="no" />
+<ComponentStatus stage="pre" responsive="no" accessible="yes" />
 
 In Jobber a Menu is used to …
 
