add unique ID and better elevation

--- a/packages/design/src/Elevations.mdx
+++ b/packages/design/src/Elevations.mdx
@@ -17,3 +17,4 @@ export function Value({ of: type }) {
 | Component | Value                |
 | :-------- | :------------------- |
 | Modal     | <Value of="modal" /> |
+| Menu      | <Value of="menu" />  |
