Id like to get your input on an inline (#73)
* first pass on master field component

* create master form field component

* replace InputText to use master component

* export formfield props

* adjust inout text default and documentation

* allow textarea and select as a type

* add maxLength

* add alignment

* adjust css to use custom properties

* adjust input text

* add text field component

* reduce default min height for textarea

* add rows and sort props

* don't need to specifcy textarea

* make FormField private

* delete input text

* delete unused file on textfield

* better labels when autofilled

* add form field documentation

* mark textfield as responsive and accessible

* simplify props and make type rquired

* rename TextField to InputText

* add change handler test

* update the docs

* remove accidentally commited import

* add descriptions on form field props

* let CSS handle the width of maxLength

* ensure that miniLabel class gets added if there's placeholder

* omit children too

* allow defaultValue and value and code cleanup

* adjust documentation to make sean happy

* Fix props table.

* Upgrade Docz

* highlight text on readonly

* add better example of controlled inputs

* tighten up usage of multiline and rows

* Handle select on safari

--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -7,32 +7,106 @@ route: /components/input-text
 import { Playground, Props } from "docz";
 import { ComponentStatus } from "@jobber/docx";
 import { InputText } from ".";
+import { useState } from "react";
+import { Text } from "../Text";
 
 # Input Text
 
-<ComponentStatus stage="rc" responsive="yes" accessible="no" />
+<ComponentStatus stage="rc" responsive="yes" accessible="yes" />
 
-Input Text is used in forms to accept input from users.
+Input text is used in forms that accept short or long answers from users.
 
-## Basic InputText
+## Short answer
+
+Use this to allow users to provide short answers.
 
 <Playground>
-  <InputText size="small" placeholder="Small input" />
-  <InputText placeholder="Normal input" />
+  {() => {
+    const [value, setValue] = useState("Veintisiete");
+    const handleChange = newValue => {
+      setValue(newValue);
+    };
+    return (
+      <InputText
+        value={value}
+        onChange={handleChange}
+        name="age"
+        placeholder="Age in words"
+      />
+    );
+  }}
 </Playground>
 
-## InputText States
+## Long answer
+
+Use this to allow users to provide long answers.
 
 <Playground>
-  <InputText disabled={true} placeholder="Disabled input" />
   <InputText
-    readonly={true}
-    placeholder="Readonly input"
-    value="You can't change me."
+    multiline={true}
+    placeholder="Describe your age"
+    name="describeAge"
   />
-  <InputText error placeholder="Invalid input" />
 </Playground>
 
-## Properties
+## States
+
+### Disabled
+
+<Playground>
+  <InputText
+    placeholder="Credit card"
+    value="**** **** **** 1234"
+    disabled={true}
+    name="creditCard"
+  />
+</Playground>
+
+### Read only
+
+<Playground>
+  <InputText
+    placeholder="Your referral code"
+    value="WXYZ100"
+    readonly={true}
+    name="referralCode"
+  />
+</Playground>
+
+### Invalid
+
+<Playground>
+  <InputText
+    placeholder="Email"
+    value="atlantis"
+    invalid={true}
+    name="emailAddress"
+  />
+</Playground>
+
+## Sizes
+
+<Playground>
+  <InputText name="smallField" size="small" placeholder="Duration" />
+  <InputText name="largeField" size="large" placeholder="Your username" />
+</Playground>
+
+## Inline
+
+<Playground>
+  <Text>
+    My name is
+    <InputText
+      name="durationInDays"
+      value="Jeff"
+      size="small"
+      inline={true}
+      maxLength={4}
+      align="center"
+    />
+  </Text>
+</Playground>
+
+## InputText Properties
 
 <Props of={InputText} />
