missed section props import

--- a/packages/components/src/Menu/Menu.mdx
+++ b/packages/components/src/Menu/Menu.mdx
@@ -6,7 +6,7 @@ route: /components/menu
 
 import { Playground, Props } from "docz";
 import { ComponentStatus } from "@jobber/docx";
-import { Menu, SectionProps } from ".";
+import { Menu } from ".";
 
 # Menu
 
