rename time picker to input text

--- a/packages/components/src/InputTime/InputTime.mdx
+++ b/packages/components/src/InputTime/InputTime.mdx
@@ -1,20 +1,20 @@
 ---
-name: TimePicker
+name: InputTime
 menu: Components
-route: /components/time-picker
+route: /components/input-time
 ---
 
 import { Playground, Props } from "docz";
 import { ComponentStatus } from "@jobber/docx";
-import { TimePicker } from ".";
+import { InputTime } from ".";
 import { CivilTime } from "@std-proposal/temporal";
 
-# TimePicker
+# InputTime
 
 <ComponentStatus stage="pre" responsive="no" accessible="no" />
 
-In Jobber a TimePicker is used to select a time of day. For example the time a
-messages should be sent or when a job started/ended.
+Select a time of day. For example the time a messages should be sent or when a
+job started/ended.
 
 At the moment the 12-hour vs 24-hour preference is set by the operating system
 and this component doesn't look at the Jobber setting.
@@ -23,9 +23,9 @@ and this component doesn't look at the Jobber setting.
 
 <Playground>
 
-  <TimePicker defaultValue={new CivilTime(2,35)} size="small" />
-  <TimePicker defaultValue={new CivilTime(2,35)} />
-  <TimePicker defaultValue={new CivilTime(2,35)} size="large" />
+  <InputTime defaultValue={new CivilTime(2,35)} size="small" />
+  <InputTime defaultValue={new CivilTime(2,35)} />
+  <InputTime defaultValue={new CivilTime(2,35)} size="large" />
 
 </Playground>
 
@@ -33,9 +33,9 @@ and this component doesn't look at the Jobber setting.
 
 <Playground>
 
-  <TimePicker defaultValue={new CivilTime(3, 52)} disabled />
-  <TimePicker defaultValue={new CivilTime(5, 23)} readOnly />
-  <TimePicker defaultValue={new CivilTime(2, 35)} invalid />
+  <InputTime defaultValue={new CivilTime(3, 52)} disabled={true} />
+  <InputTime defaultValue={new CivilTime(5, 23)} readonly={true} />
+  <InputTime defaultValue={new CivilTime(2, 35)} invalid={true} />
 
 </Playground>
 
@@ -47,10 +47,10 @@ the last element is set the change event will fire.
 
 <Playground>
 
-<TimePicker onChange={x => console.log(x)} />
+<InputTime onChange={x => console.log(x)} />
 
 </Playground>
 
-## TimePicker Properties
+## InputTime Properties
 
-<Props of={TimePicker} />
+<Props of={InputTime} />
