--- a/packages/components/src/InputText/InputText.mdx
+++ b/packages/components/src/InputText/InputText.mdx
@@ -114,29 +114,20 @@ Use this to allow users to provide short answers.
 <Playground>
   {() => {
     const ref = React.createRef();
-    focusTextInput() {
-      this.ref.current.focus();
-    }
-
+    const focusInput = () => {
+      ref.current.focus();
+    };
     return (
-      <div>
-      <InputText
-        value={value}
-        ref={ref}
-        name="age"
-        placeholder="Age in words"
-      />
-
-      <input
-        type="button"
-        value="Focus the text input"
-        onClick={this.focusTextInput}
-      />
-      </div>
+      <>
+        <InputText name="age" ref={ref} placeholder="Age in words" />
+        <input
+          type="button"
+          value="Focus the text input"
+          onClick={focusInput}
+        />
+      </>
     );
-
-}}
-
+  }}
 </Playground>
 
 ## InputText Properties
