Time for iBrowse (#90)
* Add UUID for associating label with input.

* Forward ref

* Safari V1

* Safari V1

* split out safari

* no more any

* fix build issue

* `...(use && { conditional: spread }),`

--- a/packages/components/src/InputTime/InputTime.mdx
+++ b/packages/components/src/InputTime/InputTime.mdx
@@ -7,6 +7,8 @@ route: /components/input-time
 import { Playground, Props } from "docz";
 import { ComponentStatus } from "@jobber/docx";
 import { InputTime } from ".";
+import { Button } from "../Button";
+import { useState } from "react";
 import { CivilTime } from "@std-proposal/temporal";
 
 # InputTime
@@ -20,6 +22,10 @@ At the moment the 12-hour vs 24-hour preference is set by the operating system
 and this component doesn't look at the Jobber setting.
 
 ## Simple Example
+
+```ts
+import { InputTime } "@jobber/components/InputTime";
+```
 
 <Playground>
 
@@ -46,9 +52,22 @@ set. Setting just the hour or minute or _meridiam_ won't fire the event. When
 the last element is set the change event will fire.
 
 <Playground>
-
-<InputTime onChange={x => console.log(x)} />
-
+  {() => {
+    const [time, setTime] = useState(new CivilTime(3, 52));
+    const resetTime = () => {
+      setTime(new CivilTime(3, 52));
+    };
+    const handleChange = newTime => {
+      setTime(newTime);
+    };
+    return (
+      <>
+        <InputTime value={time} onChange={handleChange} />
+        <pre>{time.toString()}</pre>
+        <Button label="Reset" onClick={resetTime} />
+      </>
+    );
+  }}
 </Playground>
 
 ## InputTime Properties
